Bug fix user permissions
Solve a Bug fix, where users cant't write in their assigned share because of owner permissions

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,9 +3,10 @@ version: '3'
 services:
   samba:
     build: .
-    image: servercontainers/samba
     restart: always
-    network_mode: host
+    ports:
+      - 139:139
+      - 445:445
     # uncomment to solve bug: https://github.com/ServerContainers/samba/issues/50 - wsdd2 only - not needed for samba
     #cap_add:
     #  - CAP_NET_ADMIN
@@ -29,10 +30,6 @@ services:
       UID_bob: 1001
       GROUPS_bob: family
 
-      # example for hashed password (user: foo | password: bar) - generated using create-hash.sh script.
-      ACCOUNT_foo: "foo:1000:XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX:86C156FC198B358CCCF6278D8BD49B6A:[U          ]:LCT-61B0859A:"
-      UID_foo: 1002
-      GROUPS_foo: family
 
       SAMBA_VOLUME_CONFIG_shared_home: "[Home]; path=/shares/homes/%U; valid users = alice, bob, foo; guest ok = no; read only = no; browseable = yes"
 
@@ -46,13 +43,9 @@ services:
       
       SAMBA_VOLUME_CONFIG_timemachine: "[TimeMachine]; path=/shares/timemachine/%U; valid users = alice, bob, foo; guest ok = no; read only = no; browseable = yes; fruit:time machine = yes; fruit:time machine max size = 500G"
     volumes:
-      - /etc/avahi/services/:/external/avahi
-      
-      # avoid loops when mounting folders to /shares (I'd recommend explicit mapping for each share)
       - ./shares/alice:/shares/alice
       - ./shares/alice-hidden:/shares/alice-hidden
       - ./shares/bob:/shares/bob
       - ./shares/public:/shares/public
       - ./shares/homes:/shares/homes
       - ./shares/timemachine:/shares/timemachine
-      
